[metadata]
name = network-analyzer
url = https://github.com/trustlines-protocol/network-analyzer
description = Fetch information about the trustlines currency networks and users
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
license_file = LICENSE
keywords = trustlines network analyzer
author = Trustlines-Network
author_email = contact@brainbot.com

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options.packages.find]
where=src

[options]
python_requires = >= 3.8
setup_requires = setuptools_scm
package_dir=
    =src
packages=find:

install_requires =
    web3>=5.8.0,<6.0.0
    click

[options.entry_points]
console_scripts =
    network-analyzer=network_analyzer.cli:main

[flake8]
max-line-length = 120
ignore =
       # P101 format string does contain unindexed parameters
      P101
       # default:
       E121,E123,E126,E226,E24,E704,W503,W504
       # E203 is whitespace before ':',
       # black does it right, but flake8 wrongly complains
       E203

[isort]
line_length=88
known_future_library=future
known_first_party=network_analyzer
default_section=THIRDPARTY
combine_as_imports=1
# black compatibility
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
